kube/cursulRataClient/deployment_cursul-rata-client.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cursul-rata-config
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cursul-rata-config
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cursul-rata-config
    spec:
      containers:
        - image: registry.github.com/File-V/Curs-valutar:v3
          name: cursul-rata-config
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: regcred
