kube/cursulRataClient/serviciul_curs-rata-client.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: currsul-rata-client
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: currsul-rata-client
  type: ClusterIP
