kube/cursulRataClient/ingress_cursul-rata-client.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currsul-rata-client
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currsul-rata-client
                port:
                  number: 80
